--- a/asset/style/syle.css
+++ b/asset/style/syle.css
@@ -47,7 +47,7 @@ h4 {
         Header Section Style
 -------------------------------- */
 .banner {
-    background: rgba(0, 0, 0, 0.6) url('../images/banner.png');
+    background: rgba(0, 0, 0, 0.8) url('../images/banner.png');
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
@@ -85,4 +85,51 @@ h4 {
 
 .card-icon-color {
     color: #B68C5A;
+}
+
+/* ------------------------------------------
+        Clients Feedback Section style
+------------------------------------------*/
+.carousel-item-image-1{
+    background: rgba(0, 0, 0, 0.8) url('../images/slider-1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 600px;
+    border-radius: 10px;
+    background-blend-mode: darken;
+}
+.carousel-item-image-2{
+    background: rgba(0, 0, 0, 0.8) url('../images/slider-2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 600px;
+    border-radius: 10px;
+    background-blend-mode: darken;
+}
+.carousel-item-image-3{
+    background: rgba(0, 0, 0, 0.8) url('../images/slider-3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 600px;
+    border-radius: 10px;
+    background-blend-mode: darken;
+}
+
+@media only screen and (max-width: 576px){
+    .carousel-item-image-1 {
+        height: 250px;
+    }
+    .carousel-item-image-2 {
+        height: 250px;
+    }
+    .carousel-item-image-3 {
+        height: 250px;
+    }
+}
+
+.img-justice-fluid{
+    width: 15%;
 }
